--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.themoviedbapp"
+        applicationId "com.example.xseries"
         minSdk 21
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -38,15 +39,16 @@ android {
 dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
     def lifecycle_version = "2.3.1"
     def retrofit_version = "2.9.0"
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //Retrofit & Gson
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -65,6 +67,9 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.3.9'
 
     implementation 'com.eightbitlab:blurview:1.6.6'
+
+    //Realtime Database
+    implementation 'com.google.firebase:firebase-database:20.2.1'
 
 
 }
