--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TheMovieDBApp">
         <activity
-            android:name="com.example.xseries.View.SearchActivity"
+            android:name=".View.Admin_Panel"
+            android:exported="false" />
+        <activity
+            android:name=".View.Settings_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".View.SearchActivity"
             android:exported="true" />
         <activity
             android:name="com.example.xseries.Details.MovieDetails"
@@ -22,7 +28,7 @@
             android:name="com.example.xseries.Details.TVDetails"
             android:exported="true" />
         <activity
-            android:name="com.example.xseries.View.MainActivity"
+            android:name=".View.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
