--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/xseries_icon"
@@ -19,9 +18,9 @@
         android:theme="@style/Theme.TheMovieDBApp">
         <activity
             android:name=".View.Video_Player"
-            android:requestLegacyExternalStorage="true"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="false" />
+            android:exported="false"
+            android:requestLegacyExternalStorage="true" />
         <activity
             android:name=".View.Video_Input"
             android:exported="false" />
