--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TheMovieDBApp">
         <activity
+            android:name=".Search_Activity"
+            android:exported="false" />
+        <activity
             android:name=".View.Video_Player"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
@@ -34,10 +37,10 @@
             android:name=".View.SearchActivity"
             android:exported="true" />
         <activity
-            android:name="com.example.xseries.Details.MovieDetails"
+            android:name=".Details.MovieDetails"
             android:exported="true" />
         <activity
-            android:name="com.example.xseries.Details.TVDetails"
+            android:name=".Details.TVDetails"
             android:exported="true" />
         <activity
             android:name=".View.MainActivity"
